Add run script in package.json, suppress warnings in app.js with a comment.

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "doc": "doc"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint todo/static/*.js"
   },
   "keywords": [],
   "author": "",
