--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "jquery": "^2.2.0"
   },
   "devDependencies": {
-    "eslint": "^1.10.3"
+    "babel-loader": "^6.2.1",
+    "babel-preset-es2015": "^6.3.13",
+    "eslint": "^1.10.3",
+    "webpack": "^1.12.11",
+    "webpack-dev-server": "^1.14.1"
   }
 }
