--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "doc": "doc"
   },
   "scripts": {
+    "start": "webpack-dev-server --content-base app/",
     "lint": "eslint todo/static/*.js"
   },
   "keywords": [],
