ES6: Multiline template string with array methods for map/join, plus arrow (fat-arrow) function. No longer need document passed in nor template function.

--- a/.eslintrc
+++ b/.eslintrc
@@ -6,8 +6,12 @@
       "single"
     ]
   },
+  "ecmaFeatures": {
+    "modules": true
+  },
   "env": {
     "browser": true,
-    "jquery": true
+    "jquery": true,
+    "es6": true
   }
 }
